# mesa

./: README.md  index.html  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: inject.js  lib.rs  main.rs  messenger.css
src-tauri/src/modules/: commands.rs  mod.rs  navigation.rs  window.rs  zoom.rs
src-tauri/src/scripts/: apply-theme.js  call-window-close.js  sidebar-resize.js  theme-override.js  tweaks.css
src/styles/: base.css  dark.css  light.css  styles.css  themes.css  titlebar.css
